--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -11,9 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git remote add gitlab https://automation:${gitlab_token}@gitlab.com/g4826/csf363-groups/group17-blockbusters/tetris.git
           git checkout -b ci
-          git pull --rebase gitlab ci
           git merge main
           git push gitlab ci
         env:
